--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_highlight_text
 description: Flutter文本指定文字或者指定分割符高亮
-version: 0.0.1
-homepage: https://juejin.cn/user/4011486977985165
+version: 0.0.2
+homepage: https://github.com/ZYJJerry/flutter_highlight_text
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
